Fix overflow in mobile

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -297,6 +297,10 @@ a:visited {
 
 }
 
+.main {
+  overflow-x: clip;
+}
+
 .home .sticky-top .backToTop,
 /* .home .js-is-sticky .backToTop, */
 .show-top-button .backToTop {
@@ -479,8 +483,10 @@ a:visited {
 .iframe-wrapper {
     transform: translateX(100vw);
     transition: all .5s;
+
     &.show {
         transform: translateX(0px);
+        overflow-x: unset;
     }
 }
 
@@ -828,19 +834,9 @@ a:visited {
 
         ul {
             text-align: left;
-            /* ☞
-            list-style: disclosure-closed;
-
-            list-style: '☞';
-            li::marker {
-                color: $marker-color;
-                font-size: 1.4em;
-                display: inline-block;
-                vertical-align: middle;
-            }
-            */
             list-style: none;
             padding-inline-start: 0;
+
             li::before {
                 content: '☞';
                 color: $marker-color;
@@ -953,9 +949,7 @@ a:visited {
             display: flex;
             justify-content: flex-end;
             width: max-content;
-            /*
-            box-shadow: inset 0 -15px 0 $text-underline-color;
-            */
+
             @media (max-width : 35em) {
                 font-size: 10vw;
                 margin-top: 1em;
@@ -1241,7 +1235,7 @@ a:visited {
         .video-preview {
             padding: 1rem;
             max-width: 100%;
-             filter: url($sunset-filter);
+            filter: url($sunset-filter);
 
             & + .opt-in-overlay-content {
                 position: absolute;
